
syntax = "proto3";

package osmosis.concentratedliquidity.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/osmosis-labs/osmosis/v14/x/concentrated-liquidity/model";

message UptimeInfo {
  uint64 poolId = 1;

  int64 tickIndex = 2;

  repeated UptimeTracker uptime_trackers = 3 [
    (gogoproto.moretags) = "yaml:\"uptime_trackers\"",
    (gogoproto.nullable) = false
  ];
}

message UptimeTracker {
  repeated cosmos.base.v1beta1.DecCoin uptime_growth_outside = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}
