syntax = "proto3";
package osmosis.incentives;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/osmosis-labs/osmosis/v19/x/incentives/types";

// Params holds parameters for the incentives module
message Params {
  // distr_epoch_identifier is what epoch type distribution will be triggered by
  // (day, week, etc.)
  string distr_epoch_identifier = 1
      [ (gogoproto.moretags) = "yaml:\"distr_epoch_identifier\"" ];
  repeated cosmos.base.v1beta1.Coin create_gauge_fee = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"create_gauge_fee\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin add_to_gauge_fee = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"add_to_gauge_fee\"",
    (gogoproto.nullable) = false
  ];
}
